Add price_per_night attribute to create room request
